objects/Party_Merge__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Defines which objects should be copied across to the winning account record as part of a party merge</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lookup_Field_Name__c</fullName>
        <label>Lookup Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isPersonContactId__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if the Lookup Field is referring to PersonContactId</description>
        <inlineHelpText>Set to true if the look up field is referencing the PersonContactId</inlineHelpText>
        <label>isPersonContactId</label>
        <type>Checkbox</type>
    </fields>
    <label>SCV Party Merge</label>
</CustomObject>